I14-1032 Add WatchdogStatus to inform of the state of the watchdogs
- Created new topic for sending messages to the client about the state
of the watchdogs. If they are enabled or disabled and their state, if
they are resuming or pausing.
- Users can now resume a scan that it was paused by a watchdog. A dialog
opens with information about which watchdogs are pausing the scan and if
they select Ok and the watchdogs have not resumed already, the scan is
resumed.
- Removed AdministratorMessage as it was not used.
- Refactored some redundant code in StatusQueueView

Change-Id: Iaab230d639eab9afd203d4e9dffeba83d8d740c8